add registration_token module
add REDIS_REGISTRATION_TOKEN_DB env var
add REGISTRATION_TOKEN_TIME_TO_LIVE env var

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,8 @@
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_VALIDATION_CODE=1
+REDIS_VALIDATION_CODE_DB=1
+REDIS_REGISTRATION_TOKEN_DB=2
 GENERATE_FAKE_CODE=1
 GENERATED_CODE_TIME_TO_LIVE=120
 MAXIMUM_CODE_REQUEST_COUNT=3
+REGISTRATION_TOKEN_TIME_TO_LIVE=600
