--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 asgiref==3.7.2
 async-timeout==4.0.2
+coverage==7.2.7
 Django==4.2.2
 djangorestframework==3.14.0
 python-dotenv==1.0.0
 pytz==2023.3
 redis==4.5.5
 sqlparse==0.4.4
-typing-extensions==4.6.3
+typing_extensions==4.6.3
