--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,4 @@ GENERATE_FAKE_CODE=1
 GENERATED_CODE_TIME_TO_LIVE=120
 MAXIMUM_CODE_REQUEST_COUNT=3
 REGISTRATION_TOKEN_TIME_TO_LIVE=600
+REDIS_ATTEMPTS_DB=3
