--- a/.env.sample
+++ b/.env.sample
@@ -3,10 +3,12 @@ REDIS_PORT=6379
 REDIS_VALIDATION_CODE_DB=1
 REDIS_REGISTRATION_TOKEN_DB=2
 REDIS_ATTEMPTS_DB=3
+REDIS_BLOCKED_DB=4
 
 GENERATED_CODE_TIME_TO_LIVE=120
 REGISTRATION_TOKEN_TIME_TO_LIVE=600
 ATTEMPTS_TIME_TO_LIVE=3600
+BLOCKED_KEY_TIME_TO_LIVE=3600
 
 MAXIMUM_CODE_REQUEST_COUNT=3
 
